seaqt/QtWidgets/gen_qtablewidget.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct VirtualQTableWidget VirtualQTableWidget;
void QTableWidget_connect_itemPressed(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemDoubleClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemActivated(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemEntered(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_currentItemChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_connect_itemSelectionChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QTableWidget_connect_cellPressed(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellDoubleClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellActivated(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellEntered(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_cellChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_connect_currentCellChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int, int, int), void (*release)(intptr_t));
QMetaObject* QTableWidget_virtualbase_metaObject(const VirtualQTableWidget* self);
void* QTableWidget_virtualbase_metacast(VirtualQTableWidget* self, const char* param1);
int QTableWidget_virtualbase_metacall(VirtualQTableWidget* self, int param1, int param2, void** param3);
bool QTableWidget_virtualbase_event(VirtualQTableWidget* self, QEvent* e);
struct miqt_array /* of struct miqt_string */  QTableWidget_virtualbase_mimeTypes(const VirtualQTableWidget* self);
QMimeData* QTableWidget_virtualbase_mimeData(const VirtualQTableWidget* self, struct miqt_array /* of QTableWidgetItem* */  items);
bool QTableWidget_virtualbase_dropMimeData(VirtualQTableWidget* self, int row, int column, QMimeData* data, int action);
int QTableWidget_virtualbase_supportedDropActions(const VirtualQTableWidget* self);
void QTableWidget_virtualbase_dropEvent(VirtualQTableWidget* self, QDropEvent* event);
void QTableWidget_virtualbase_setRootIndex(VirtualQTableWidget* self, QModelIndex* index);
void QTableWidget_virtualbase_setSelectionModel(VirtualQTableWidget* self, QItemSelectionModel* selectionModel);
void QTableWidget_virtualbase_doItemsLayout(VirtualQTableWidget* self);
QRect* QTableWidget_virtualbase_visualRect(const VirtualQTableWidget* self, QModelIndex* index);
void QTableWidget_virtualbase_scrollTo(VirtualQTableWidget* self, QModelIndex* index, int hint);
QModelIndex* QTableWidget_virtualbase_indexAt(const VirtualQTableWidget* self, QPoint* p);
void QTableWidget_virtualbase_scrollContentsBy(VirtualQTableWidget* self, int dx, int dy);
void QTableWidget_virtualbase_initViewItemOption(const VirtualQTableWidget* self, QStyleOptionViewItem* option);
void QTableWidget_virtualbase_paintEvent(VirtualQTableWidget* self, QPaintEvent* e);
void QTableWidget_virtualbase_timerEvent(VirtualQTableWidget* self, QTimerEvent* event);
int QTableWidget_virtualbase_horizontalOffset(const VirtualQTableWidget* self);
int QTableWidget_virtualbase_verticalOffset(const VirtualQTableWidget* self);
QModelIndex* QTableWidget_virtualbase_moveCursor(VirtualQTableWidget* self, int cursorAction, int modifiers);
void QTableWidget_virtualbase_setSelection(VirtualQTableWidget* self, QRect* rect, int command);
QRegion* QTableWidget_virtualbase_visualRegionForSelection(const VirtualQTableWidget* self, QItemSelection* selection);
struct miqt_array /* of QModelIndex* */  QTableWidget_virtualbase_selectedIndexes(const VirtualQTableWidget* self);
void QTableWidget_virtualbase_updateGeometries(VirtualQTableWidget* self);
QSize* QTableWidget_virtualbase_viewportSizeHint(const VirtualQTableWidget* self);
int QTableWidget_virtualbase_sizeHintForRow(const VirtualQTableWidget* self, int row);
int QTableWidget_virtualbase_sizeHintForColumn(const VirtualQTableWidget* self, int column);
void QTableWidget_virtualbase_verticalScrollbarAction(VirtualQTableWidget* self, int action);
void QTableWidget_virtualbase_horizontalScrollbarAction(VirtualQTableWidget* self, int action);
bool QTableWidget_virtualbase_isIndexHidden(const VirtualQTableWidget* self, QModelIndex* index);
void QTableWidget_virtualbase_selectionChanged(VirtualQTableWidget* self, QItemSelection* selected, QItemSelection* deselected);
void QTableWidget_virtualbase_currentChanged(VirtualQTableWidget* self, QModelIndex* current, QModelIndex* previous);
void QTableWidget_virtualbase_keyboardSearch(VirtualQTableWidget* self, struct miqt_string search);
QAbstractItemDelegate* QTableWidget_virtualbase_itemDelegateForIndex(const VirtualQTableWidget* self, QModelIndex* index);
QVariant* QTableWidget_virtualbase_inputMethodQuery(const VirtualQTableWidget* self, int query);
void QTableWidget_virtualbase_reset(VirtualQTableWidget* self);
void QTableWidget_virtualbase_selectAll(VirtualQTableWidget* self);
void QTableWidget_virtualbase_dataChanged(VirtualQTableWidget* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
void QTableWidget_virtualbase_rowsInserted(VirtualQTableWidget* self, QModelIndex* parent, int start, int end);
void QTableWidget_virtualbase_rowsAboutToBeRemoved(VirtualQTableWidget* self, QModelIndex* parent, int start, int end);
void QTableWidget_virtualbase_updateEditorData(VirtualQTableWidget* self);
void QTableWidget_virtualbase_updateEditorGeometries(VirtualQTableWidget* self);
void QTableWidget_virtualbase_verticalScrollbarValueChanged(VirtualQTableWidget* self, int value);
void QTableWidget_virtualbase_horizontalScrollbarValueChanged(VirtualQTableWidget* self, int value);