seaqt/QtWidgets/gen_qtablewidget.nim

  dataChanged*: proc(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void {.cdecl, raises: [], gcsafe.}
  rowsInserted*: proc(self: pointer, parent: pointer, start: cint, endVal: cint): void {.cdecl, raises: [], gcsafe.}
  rowsAboutToBeRemoved*: proc(self: pointer, parent: pointer, start: cint, endVal: cint): void {.cdecl, raises: [], gcsafe.}
  updateEditorData*: proc(self: pointer): void {.cdecl, raises: [], gcsafe.}
  updateEditorGeometries*: proc(self: pointer): void {.cdecl, raises: [], gcsafe.}
  verticalScrollbarValueChanged*: proc(self: pointer, value: cint): void {.cdecl, raises: [], gcsafe.}
  horizontalScrollbarValueChanged*: proc(self: pointer, value: cint): void {.cdecl, raises: [], gcsafe.}
  closeEditor*: proc(self: pointer, editor: pointer, hint: cint): void {.cdecl, raises: [], gcsafe.}
  commitData*: proc(self: pointer, editor: pointer): void {.cdecl, raises: [], gcsafe.}
  editorDestroyed*: proc(self: pointer, editor: pointer): void {.cdecl, raises: [], gcsafe.}
  edit2*: proc(self: pointer, index: pointer, trigger: cint, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  selectionCommand*: proc(self: pointer, index: pointer, event: pointer): cint {.cdecl, raises: [], gcsafe.}
  startDrag*: proc(self: pointer, supportedActions: cint): void {.cdecl, raises: [], gcsafe.}
  focusNextPrevChild*: proc(self: pointer, next: bool): bool {.cdecl, raises: [], gcsafe.}
  viewportEvent*: proc(self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  mousePressEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseMoveEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseReleaseEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseDoubleClickEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragEnterEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragMoveEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragLeaveEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  focusInEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  focusOutEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  keyPressEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  resizeEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  inputMethodEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(self: pointer, objectVal: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  minimumSizeHint*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
  sizeHint*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
  setupViewport*: proc(self: pointer, viewport: pointer): void {.cdecl, raises: [], gcsafe.}
  wheelEvent*: proc(self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  contextMenuEvent*: proc(self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  changeEvent*: proc(self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  initStyleOption*: proc(self: pointer, option: pointer): void {.cdecl, raises: [], gcsafe.}
  devType*: proc(self: pointer): cint {.cdecl, raises: [], gcsafe.}
  setVisible*: proc(self: pointer, visible: bool): void {.cdecl, raises: [], gcsafe.}
  heightForWidth*: proc(self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  hasHeightForWidth*: proc(self: pointer): bool {.cdecl, raises: [], gcsafe.}
  paintEngine*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
  keyReleaseEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  enterEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  leaveEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  moveEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  closeEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  tabletEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  actionEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  showEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  hideEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  nativeEvent*: proc(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool {.cdecl, raises: [], gcsafe.}
  metric*: proc(self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  initPainter*: proc(self: pointer, painter: pointer): void {.cdecl, raises: [], gcsafe.}
  redirected*: proc(self: pointer, offset: pointer): pointer {.cdecl, raises: [], gcsafe.}
  sharedPainter*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQTableWidget_virtualbase_metaObject(self: pointer): pointer {.importc: "QTableWidget_virtualbase_metaObject".}
proc fcQTableWidget_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QTableWidget_virtualbase_metacast".}
proc fcQTableWidget_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTableWidget_virtualbase_metacall".}
proc fcQTableWidget_virtualbase_event(self: pointer, e: pointer): bool {.importc: "QTableWidget_virtualbase_event".}
proc fcQTableWidget_virtualbase_mimeTypes(self: pointer): struct_miqt_array {.importc: "QTableWidget_virtualbase_mimeTypes".}
proc fcQTableWidget_virtualbase_mimeData(self: pointer, items: struct_miqt_array): pointer {.importc: "QTableWidget_virtualbase_mimeData".}
proc fcQTableWidget_virtualbase_dropMimeData(self: pointer, row: cint, column: cint, data: pointer, action: cint): bool {.importc: "QTableWidget_virtualbase_dropMimeData".}
proc fcQTableWidget_virtualbase_supportedDropActions(self: pointer): cint {.importc: "QTableWidget_virtualbase_supportedDropActions".}
proc fcQTableWidget_virtualbase_dropEvent(self: pointer, event: pointer): void {.importc: "QTableWidget_virtualbase_dropEvent".}
proc fcQTableWidget_virtualbase_setRootIndex(self: pointer, index: pointer): void {.importc: "QTableWidget_virtualbase_setRootIndex".}
proc fcQTableWidget_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QTableWidget_virtualbase_setSelectionModel".}
proc fcQTableWidget_virtualbase_doItemsLayout(self: pointer): void {.importc: "QTableWidget_virtualbase_doItemsLayout".}
proc fcQTableWidget_virtualbase_visualRect(self: pointer, index: pointer): pointer {.importc: "QTableWidget_virtualbase_visualRect".}
proc fcQTableWidget_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void {.importc: "QTableWidget_virtualbase_scrollTo".}
proc fcQTableWidget_virtualbase_indexAt(self: pointer, p: pointer): pointer {.importc: "QTableWidget_virtualbase_indexAt".}
proc fcQTableWidget_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void {.importc: "QTableWidget_virtualbase_scrollContentsBy".}
proc fcQTableWidget_virtualbase_initViewItemOption(self: pointer, option: pointer): void {.importc: "QTableWidget_virtualbase_initViewItemOption".}
proc fcQTableWidget_virtualbase_paintEvent(self: pointer, e: pointer): void {.importc: "QTableWidget_virtualbase_paintEvent".}
proc fcQTableWidget_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QTableWidget_virtualbase_timerEvent".}
proc fcQTableWidget_virtualbase_horizontalOffset(self: pointer): cint {.importc: "QTableWidget_virtualbase_horizontalOffset".}
proc fcQTableWidget_virtualbase_verticalOffset(self: pointer): cint {.importc: "QTableWidget_virtualbase_verticalOffset".}
proc fcQTableWidget_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer {.importc: "QTableWidget_virtualbase_moveCursor".}
proc fcQTableWidget_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void {.importc: "QTableWidget_virtualbase_setSelection".}
proc fcQTableWidget_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer {.importc: "QTableWidget_virtualbase_visualRegionForSelection".}
proc fcQTableWidget_virtualbase_selectedIndexes(self: pointer): struct_miqt_array {.importc: "QTableWidget_virtualbase_selectedIndexes".}
proc fcQTableWidget_virtualbase_updateGeometries(self: pointer): void {.importc: "QTableWidget_virtualbase_updateGeometries".}
proc fcQTableWidget_virtualbase_viewportSizeHint(self: pointer): pointer {.importc: "QTableWidget_virtualbase_viewportSizeHint".}
proc fcQTableWidget_virtualbase_sizeHintForRow(self: pointer, row: cint): cint {.importc: "QTableWidget_virtualbase_sizeHintForRow".}
proc fcQTableWidget_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint {.importc: "QTableWidget_virtualbase_sizeHintForColumn".}
proc fcQTableWidget_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void {.importc: "QTableWidget_virtualbase_verticalScrollbarAction".}
proc fcQTableWidget_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void {.importc: "QTableWidget_virtualbase_horizontalScrollbarAction".}
proc fcQTableWidget_virtualbase_isIndexHidden(self: pointer, index: pointer): bool {.importc: "QTableWidget_virtualbase_isIndexHidden".}
proc fcQTableWidget_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void {.importc: "QTableWidget_virtualbase_selectionChanged".}
proc fcQTableWidget_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void {.importc: "QTableWidget_virtualbase_currentChanged".}
proc fcQTableWidget_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void {.importc: "QTableWidget_virtualbase_keyboardSearch".}
proc fcQTableWidget_virtualbase_itemDelegateForIndex(self: pointer, index: pointer): pointer {.importc: "QTableWidget_virtualbase_itemDelegateForIndex".}
proc fcQTableWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer {.importc: "QTableWidget_virtualbase_inputMethodQuery".}
proc fcQTableWidget_virtualbase_reset(self: pointer): void {.importc: "QTableWidget_virtualbase_reset".}
proc fcQTableWidget_virtualbase_selectAll(self: pointer): void {.importc: "QTableWidget_virtualbase_selectAll".}
proc fcQTableWidget_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void {.importc: "QTableWidget_virtualbase_dataChanged".}
proc fcQTableWidget_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void {.importc: "QTableWidget_virtualbase_rowsInserted".}
proc fcQTableWidget_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void {.importc: "QTableWidget_virtualbase_rowsAboutToBeRemoved".}
proc fcQTableWidget_virtualbase_updateEditorData(self: pointer): void {.importc: "QTableWidget_virtualbase_updateEditorData".}
proc fcQTableWidget_virtualbase_updateEditorGeometries(self: pointer): void {.importc: "QTableWidget_virtualbase_updateEditorGeometries".}
proc fcQTableWidget_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void {.importc: "QTableWidget_virtualbase_verticalScrollbarValueChanged".}
proc fcQTableWidget_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void {.importc: "QTableWidget_virtualbase_horizontalScrollbarValueChanged".}
